--- a/app/views/studios/index.html.erb
+++ b/app/views/studios/index.html.erb
@@ -1,31 +1,35 @@
-<h1>Listing studios</h1>
+<div class="container">
+    <h1>Listing studios</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Capacity</th>
-    <th>Price</th>
-    <th>Available from</th>
-    <th>Available to</th>
-    <th>Notes</th>
-    <th>Venue</th>
-    <th></th>
-  </tr>
+    <table class="table table-condensed">
+        <tr>
+            <th>Name</th>
+            <th>Venue</th>
+            <th>Capacity</th>
+            <th>Price</th>
+            <th>Available from</th>
+            <th>Available to</th>
+            <th>Suggested slots</th>
+            <th>Notes</th>
+            <th></th>
+        </tr>
 
-<% @studios.each do |studio| %>
-  <tr>
-    <td><%= studio.name %></td>
-    <td><%= studio.capacity %></td>
-    <td><%= studio.price %></td>
-    <td><%= studio.available_from %></td>
-    <td><%= studio.available_to %></td>
-    <td><%= studio.notes %></td>
-    <td><%= studio.venue %></td>
-    <td><%= link_to 'Edit', edit_studio_path(studio) %></td>
-  </tr>
-<% end %>
-</table>
+    <% @studios.each do |studio| %>
+        <tr>
+            <td><%= studio.name %></td>
+            <td><%= studio.venue.to_s + ", " + studio.venue.city.to_s %></td>
+            <td><%= studio.capacity %></td>
+            <td><%= studio.price %></td>
+            <td><%= studio.available_from.to_s(:time_only) %></td>
+            <td><%= studio.available_to.to_s(:time_only) %></td>
+            <td><%= studio.suggested_slots.map { |slot| slot.time.to_s(:time_only) }.join(",") %></td>
+            <td><%= studio.notes %></td>
+            <td><%= link_to 'Edit', edit_studio_path(studio) %></td>
+        </tr>
+    <% end %>
+    </table>
 
-<br />
+    <br />
 
-<%= link_to 'New Studio', new_studio_path %> | <%= link_to 'Home', root_path %> |
+    <%= link_to 'New studio', new_studio_path %> | <%= link_to 'Home', root_path %>
+</div>
