--- a/app/views/studios/index.html.erb
+++ b/app/views/studios/index.html.erb
@@ -31,5 +31,5 @@
 
     <br />
 
-    <%= link_to 'New studio', new_studio_path %> | <%= link_to 'Home', root_path %>
+    <%= link_to 'Create new studio', new_studio_path %> | <%= link_to 'Home', root_path %>
 </div>
