--- a/app/views/suggested_slots/_form.html.erb
+++ b/app/views/suggested_slots/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@suggested_slot) do |f| %>
+<%= form_for([@studio, @suggested_slot]) do |f| %>
   <% if @suggested_slot.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@suggested_slot.errors.count, "error") %> prohibited this suggested_slot from being saved:</h2>
@@ -14,10 +14,6 @@
   <div class="field">
     <%= f.label :time %><br />
     <%= f.time_select :time %>
-  </div>
-  <div class="field">
-    <%= f.label :studio %><br />
-    <%= f.text_field :studio %>
   </div>
   <div class="actions">
     <%= f.submit %>
