--- a/app/views/suggested_slots/new.html.erb
+++ b/app/views/suggested_slots/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New suggested_slot</h1>
+<div class="container">
+	<h1>New suggested slot</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', suggested_slots_path %>
+	<%= link_to 'Home', root_path %>
+</div>
