--- a/app/views/coaches/index.html.erb
+++ b/app/views/coaches/index.html.erb
@@ -1,6 +1,7 @@
+<div class="container">
 <h1>Listing coaches</h1>
 
-<table>
+<table class="table table-condensed">
   <tr>
     <th>Name</th>
     <th>Phone</th>
@@ -24,4 +25,5 @@
 
 <br />
 
-<%= link_to 'New Instructor', new_coach_path %>
+<%= link_to 'New Instructor', new_coach_path %> | <%= link_to 'Home', root_path %>
+</div>
