--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing customer</h1>
-
+<div class="container">
+	<div class = "row">
+		<div class = "col-md-11">
+			<h1>Editing customer</h1>
+		</div>
+		<div class = "col-md-1">
+			<%= button_to "Delete customer", @customer, :method=>:delete, :class=>"btn btn-danger",:confirm=>"Are you sure?" %>
+		</div>
+	</div>
+    
 <%= render 'form' %>
 
-<%= link_to 'Show', @customer %> |
-<%= link_to 'Back', customers_path %>
+<%= link_to 'Home', root_path %>
+</div>
