--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,12 +1,11 @@
+<div class="container">
 <h1>Listing customers</h1>
 
-<table>
+<table class="table table-condensed">
   <tr>
     <th>Name</th>
     <th>Telephone number</th>
     <th>Email</th>
-    <th></th>
-    <th></th>
     <th></th>
   </tr>
 
@@ -15,13 +14,12 @@
     <td><%= customer.name %></td>
     <td><%= customer.telephone_number %></td>
     <td><%= customer.email %></td>
-    <td><%= link_to 'Show', customer %></td>
     <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-    <td><%= link_to 'Destroy', customer, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Customer', new_customer_path %>
+<%= link_to 'New Customer', new_customer_path %> | <%= link_to 'Home', root_path %>
+</div>
