--- a/app/views/events_companies/new.html.erb
+++ b/app/views/events_companies/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New events_company</h1>
+<div class="container">
+<h1>New events company</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', events_companies_path %>
+<%= link_to 'Home', root_path %>
+</div>
