--- a/app/assets/stylesheets/bookings.css.scss
+++ b/app/assets/stylesheets/bookings.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Bookings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+/* Fix for margin setting on calendar */
+.well-sm {
+ padding: 7px !important;
+ margin-bottom: 0 !important;
+}
