--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -42,7 +42,7 @@
 		
 		<div class="form-group">
 			<%= f.label :sales_person %><br />
-			<%= f.collection_select :sales_person_id, @salespeople, :id, :name, :prompt => "Select a sales person" %>
+			<%= f.collection_select :sales_person_id, @salespeople, :id, :name, {include_blank: true} %>
 			<br />
 			<%= link_to 'Create new sales person', new_sales_person_path %>
 		</div>
@@ -58,7 +58,7 @@
 		</div>
 		<div class="form-group">
 			<%= f.label :studio %><br />
-			<%= f.collection_select :studio_id, Studio.in_city(@booking.city), :id, :to_s, :prompt => "Select a studio" %>
+			<%= f.collection_select :studio_id, Studio.in_city(@booking.city), :id, :to_s, {include_blank: true} %>
 			<br />
 			<%= link_to 'Create new studio', new_studio_path %>
 		</div>
@@ -66,13 +66,13 @@
 	<div class="col-md-3">
 	  <div class="form-group">
 			<%= f.label "Instructor" %><br />
-			<%= f.collection_select :coach_id, @coaches, :id, :name, :prompt => "Select an instructor" %>
+			<%= f.collection_select :coach_id, @coaches, :id, :name, {include_blank: true} %>
 			<br />
 			<%= link_to 'Create new instructor', new_coach_path %>
 		</div>
 		<div class="form-group">
 			<%= f.label :theme %><br />
-			<%= f.collection_select :theme_id, @themes, :id, :name, :prompt => "Select a theme" %>
+			<%= f.collection_select :theme_id, @themes, :id, :name, {include_blank: true} %>
 			<br />
 			<%= link_to 'Create new theme', new_theme_path %>
 		</div>
