--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -12,7 +12,7 @@
 
     <form role="form"> <!-- Bootstrap CSS styling -->
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="form-group">
                     <%= f.label :name %><br />
                     <%= f.text_field :name %>
@@ -30,6 +30,16 @@
                     <%= f.text_field :contact_phone %>
                 </div>
                 <div class="form-group">
+                    <%= f.label :city %><br />
+                    <%= f.collection_select :city_id, @cities, :id, :name, :prompt => "Select a city" %>
+                </div>
+            </div>
+			<div class="col-md-4">
+				<div class="form-group">
+                    <%= f.label :address %><br />
+                    <%= f.text_area :address, { :rows => 3 } %>
+                </div>
+			    <div class="form-group">
                     <%= f.label :payment_procedure %><br />
                     <%= f.text_area :payment_procedure, { :rows => 3 } %>
                 </div>
@@ -37,12 +47,8 @@
                     <%= f.label "Venue notes" %><br />
                     <%= f.text_area :notes, { :rows => 3 } %>
                 </div>
-                <div class="form-group">
-                    <%= f.label :city %><br />
-                    <%= f.collection_select :city_id, @cities, :id, :name, :prompt => "Select a city" %>
-                </div>
-            </div>
-            <div class="col-md-6">
+			</div>
+            <div class="col-md-4">
                 <%= f.fields_for :studios do |s| %> <!-- Default Studio fields -->
                     <div class="panel panel-default">
                         <% if s.object.name == "Default" %>
