--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -66,7 +66,7 @@
 	<div class="col-md-3">
 	  <div class="form-group">
 			<%= f.label "Instructor" %><br />
-			<%= f.collection_select :coach_id, @coaches, :id, :name, {include_blank: true} %>
+			<%= f.collection_select :coach_id, @coaches, :id, :full_name, {include_blank: true} %>
 			<br />
 			<%= link_to 'Create new instructor', new_coach_path %>
 		</div>
