--- a/app/views/coaches/_form.html.erb
+++ b/app/views/coaches/_form.html.erb
@@ -15,8 +15,12 @@
 	<div class = "col-md-6">
 
 		<div class="form-group">
-			<%= f.label :name %><br />
-			<%= f.text_field :name, {:class=>"form-control"} %>
+			<%= f.label :first_name %><br />
+			<%= f.text_field :first_name, {:class=>"form-control"} %>
+		</div>
+        <div class="form-group">
+			<%= f.label :surname %><br />
+			<%= f.text_field :surname, {:class=>"form-control"} %>
 		</div>
 		<div class="form-group">
 			<%= f.label :phone %><br />
