--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -25,7 +25,7 @@
         <th></th>
       </tr>
 
-      <% invoice.line_items.each do |line_item| %>
+      <% invoice.line_items.order(:entry_date).each do |line_item| %>
         <tr>
           <!-- set class depending on action -->
           <td><%= line_item.entry_date.to_s(:standard) %></td>
@@ -39,18 +39,23 @@
         </tr>
       <% end %>
         <tr>
-          <td></td><td></td><td></td><td></td>
+          <td></td><td></td>
+          <td><strong><%= invoice.no_guests %></strong>
+          </td>
+          <td></td>
           <td>
             <table>
               <tr><td>VAT</td><td align="right"><%= number_to_currency(invoice.vat, unit: "&pound;") %></td></tr>
-              <tr><td><strong>Total</strong></td><td align="right"><strong><%= number_to_currency(invoice.total, unit: "&pound;") %></strong></td></tr>
+              <tr><td><strong>Total</strong></td><td align="right"><strong><%= number_to_currency(invoice.amount, unit: "&pound;") %></strong></td></tr>
             </table>
           </td>
           <td></td><td></td><td></td>
         </tr>
     </table>
     <p>Add line item:
-      <%= link_to 'Discount', new_line_item_path({:invoice_id => invoice.id, :line_item_type => :discount}) %> |
+      <%= link_to 'Early Bird Offer', new_line_item_path({:invoice_id => invoice.id, :line_item_type => :early_bird_discount}) %> |
+      <%= link_to 'Fixed Discount', new_line_item_path({:invoice_id => invoice.id, :line_item_type => :fixed_discount}) %> |
+      <%= link_to 'Price Per Guest Discount', new_line_item_path({:invoice_id => invoice.id, :line_item_type => :ppg_discount}) %> |
       <%= link_to 'Guest change', new_line_item_path({:invoice_id => invoice.id, :line_item_type => :guest_change}) %> |
       <%= link_to 'Refund', new_line_item_path({:invoice_id => invoice.id, :line_item_type => :refund}) %> |
       <%= link_to 'Deposit payment', new_line_item_path({:invoice_id => invoice.id, :line_item_type => :deposit_payment}) %> |
