--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -17,7 +17,7 @@
       
       <div class="form-group">
         <%= f.label :entry_date %><br />
-        <%= f.date_select :entry_date %>
+        <%= f.datetime_select :entry_date %>
       </div>
       
       <fieldset <%= @no_guests_state %>>
@@ -43,10 +43,12 @@
       </fieldset>
     
     <div class="col-md-4">
-      <div class="form-group">
-        <%= f.label :notes %><br />
-        <%= f.text_area :note, {:class=>"form-control", :rows=>3} %>
-      </div>
+      <fieldset <%= @note_state %>>
+        <div class="form-group">
+          <%= f.label :notes %><br />
+          <%= f.text_area :note, {:class=>"form-control", :rows=>3} %>
+        </div>
+      </fieldset>
       
       <fieldset <%= @expiry_date_state %>>
         <div class="form-group">
