--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -32,13 +32,23 @@
                 <%= link_to 'Create new city', new_city_path %>
 			</div>
 		<% end %> <!-- End of customer fields -->
-		
-		<%= f.fields_for :guest do |g| %>
-			<div class="form-group">
-				<%= g.label :number, "Number of guests" %><br />
-				<%= g.number_field :number %>
+    </div>
+    <div class="col-md-3">
+        <!-- Number of guests. If there is an invoice, changing this number must go through the line item logic -->
+        <% if @booking.invoices.empty? %>
+		  <%= f.fields_for :guest do |g| %>
+		    <div class="form-group">
+		      <%= g.label :number, "Number of guests" %><br />
+		      <%= g.number_field :number %>
 			</div>
-		<% end %>
+		  <% end %>
+        <% else %>
+          <div class="form-group">
+            <%= f.label :no_guests, "Number of guests" %><br />
+            <%= link_to @booking.no_guests, new_line_item_path({:invoice_id => @booking.invoices.last.id, :line_item_type => :guest_change}) %>
+          </div>
+        <% end %>
+        
 		
 		<div class="form-group">
 			<%= f.label :sales_person %><br />
@@ -51,10 +61,14 @@
 			<%= f.text_area :notes, {:class=>"form-control", :rows=>3} %>
 		</div>
 	</div>
-	<div class="col-md-3">
+  	<div class="col-md-3">
 		<div class="form-group">
 			<%= f.label :timeslot %><br />
-			<%= f.datetime_select :timeslot %>
+			<%= f.datetime_select :timeslot, :include_blank => true %>
+		</div>
+        <div class="form-group">
+			<%= f.label :offer %><br />
+			<%= f.text_field :offer %>
 		</div>
 		<div class="form-group">
 			<%= f.label :studio %><br />
@@ -62,8 +76,7 @@
 			<br />
 			<%= link_to 'Create new studio', new_studio_path %>
 		</div>
-	</div>
-	<div class="col-md-3">
+	
 	  <div class="form-group">
 			<%= f.label "Instructor" %><br />
 			<%= f.collection_select :coach_id, @coaches, :id, :full_name, {include_blank: true} %>
