--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 	<div class="page-header">
-		<h1>The Cheerleading Company Database</h1>
+		<h1>Pom Pom <small>The Cheerleading Company Database</small></h1>
+
 		<p>
 		<%= link_to "Create New Booking", new_booking_path %> | 
 		<%= link_to "Customers", customers_path %> |
